# meme

./: ARCHIVE_DATE  ARCHIVE_REVISION  COPYING  Makefile.am  Makefile.in  README  build.xml.in  config.h.in  configure  configure.ac  flake.nix  note.md  website.mk
tests/: Makefile.am  Makefile.in
tests/ama/: Makefile.am  Makefile.in  ama.redundant.xml  ama.withMaxodds.xml
tests/ame/: Makefile.in  ame.3dmhg.totalhits.fix-partition.html  ame.3dmhg.totalhits.fix-partition.tsv  ame.3dmhg.totalhits.no_control.html  ame.3dmhg.totalhits.no_control.tsv  ame.4dmhg.totalhits.fix-partition.html  ame.4dmhg.totalhits.fix-partition.tsv  ame.4dmhg.totalhits.no_control.html  ame.4dmhg.totalhits.no_control.tsv  ame.dna_with_covalent.html  ame.dna_with_covalent.sequences.tsv  ame.dna_with_covalent.tsv  ame.fisher.avg.control.html  ame.fisher.avg.control.sequences.tsv  ame.fisher.avg.control.tsv  ame.fisher.avg.fix-partition.html  ame.fisher.avg.fix-partition.tsv  ame.fisher.avg.no_control.html  ame.fisher.avg.no_control.tsv  ame.fisher.max.control.html  ame.fisher.max.control.sequences.tsv  ame.fisher.max.control.tsv  ame.fisher.max.fix-partition.html  ame.fisher.max.fix-partition.sequences.tsv  ame.fisher.max.fix-partition.tsv  ame.fisher.max.no_control.html  ame.fisher.max.no_control.tsv  ame.fisher.sum.control.html  ame.fisher.sum.control.tsv  ame.fisher.sum.fix-partition.html  ame.fisher.sum.fix-partition.tsv  ame.fisher.sum.no_control.html  ame.fisher.sum.no_control.tsv  ame.fisher.totalhits.control.html  ame.fisher.totalhits.control.tsv  ame.fisher.totalhits.fix-partition.html  ame.fisher.totalhits.fix-partition.tsv  ame.fisher.totalhits.no_control.html  ame.fisher.totalhits.no_control.tsv  ame.pearson.avg.no_control.html  (+47 more)
tests/bed2fasta/: Makefile.am  Makefile.in  bed2fasta1.fa  bed2fasta10.fa  bed2fasta11.fa  bed2fasta12.fa  bed2fasta2.fa  bed2fasta3.fa  bed2fasta4.fa  bed2fasta5.fa  bed2fasta6.err  bed2fasta6.fa  bed2fasta7.fa  bed2fasta8.fa
tests/centrimo/: Makefile.am  Makefile.in  cd_seq_bg_centrimo.html  cd_seq_bg_centrimo.tsv  dna_with_covalent_centrimo.html  dna_with_covalent_centrimo.tsv  local_neg_centrimo.html  local_neg_centrimo.tsv  motif_bg_centrimo.html  motif_bg_centrimo.tsv  neg_centrimo.html  neg_centrimo.tsv  neg_lo_centrimo.html  neg_lo_centrimo.tsv  neg_pv_centrimo.html  neg_pv_centrimo.tsv  seq_bg_centrimo.html  seq_bg_centrimo.tsv  uni_bg_centrimo.html  uni_bg_centrimo.tsv
tests/clustalw2fasta/: Makefile.in
tests/common/: GCN4_YPD.wig  Klf1-200-100.no_fasta.fa  Klf1-200-100_ucsc_galaxy.fa  MCM1.meme.html  Makefile.am  Makefile.in  Puf3p-dna_encoded.s  a.bed  b.bed  crp0.meme.html  gomoscore-motif23.xml  gomoscore.xml  mcast_motifs.meme  mcast_seqs.fa  motif-scan.gff  tiny_genome.fa  tiny_genome.fa.fai  tiny_mouse.fasta
tests/create-priors/: Makefile.am  Makefile.in
tests/draw-mhmm/: Makefile.in
tests/dreme/: Makefile.in  basic.xml  norc.xml
tests/fasta-center/: Makefile.in
tests/fimo/: Makefile  Makefile.am  Makefile.in  fimo-motif23.tsv  fimo-priors-genomic.tsv  fimo-priors.tsv  fimo.tsv  fimo5.tsv  fimo6.tsv
tests/glam2/: Makefile.in  glam2.txt
tests/glam2scan/: Makefile.in  glam2scan.txt
tests/gomo/: Makefile.am  Makefile.in  gomo.multipleSpecies.tsv  gomo.smallthreshold.tsv
tests/mast/: Makefile  Makefile.am  Makefile.in  mast.INO_up800.classic.anr.html.html  mast.INO_up800.classic.anr.html.xml  mast.INO_up800.classic.anr.xml.xml  mast.INO_up800.classic.oops.html.xml  mast.INO_up800.classic.oops.txt.xml  mast.INO_up800.classic.zoops.txt.xml  mast.INO_up800.classic.zoops.xml.xml  mast.Klf1-200.cd.oops.xml.html  mast.Klf1-200.cd.oops.xml.txt  mast.Klf1-200.cd.oops.xml.xml  mast.Klf1-200.cd.zoops.html.html  mast.Klf1-200.cd.zoops.html.txt  mast.Klf1-200.cd.zoops.html.xml  mast.adh.classic.anr.mini-drosoph.txt.xml  mast.adh.classic.anr.mini-drosoph.xml.xml  mast.adh.classic.anr.txt.xml  mast.adh.classic.anr.xml.xml  mast.adh.classic.oops.html.xml  mast.adh.classic.oops.mini-drosoph.html.xml  mast.adh.classic.oops.mini-drosoph.txt.xml  mast.adh.classic.oops.txt.xml  mast.adh.classic.zoops.html.xml  mast.adh.classic.zoops.mini-drosoph.html.xml  mast.adh.classic.zoops.mini-drosoph.xml.xml  mast.adh.classic.zoops.xml.xml  mast.adh.de.oops.html.html  mast.adh.de.oops.html.txt  mast.adh.de.oops.html.xml  mast.adh.de.zoops.txt.html  mast.adh.de.zoops.txt.txt  mast.adh.de.zoops.txt.xml  mast.crp0.classic.anr.html.xml  mast.crp0.classic.oops.txt.xml  mast.crp0.classic.zoops.xml.xml  mast.crp0.de.oops.txt.html  mast.crp0.de.oops.txt.txt  mast.crp0.de.oops.txt.xml  (+15 more)
tests/mcast/: Makefile.am  Makefile.in  lex0.zoops.cisml  lex0.zoops.gff  lex0.zoops.html  lex0.zoops.tsv  lex0.zoops.xml  mcast3.cisml  mcast3.gff  mcast3.html  mcast3.tsv  mcast3.xml  mcast4.cisml  mcast4.html  mcast4.tsv  mcast4.xml  mcast5.gff  mcast5.html  mcast5.tsv  mcast5.xml  parse_genomic.cisml  parse_genomic.gff  parse_genomic.html  parse_genomic.tsv  parse_genomic.xml
tests/meme/: Makefile.am  Makefile.in  meme.INO_up800.classic.anr.html  meme.INO_up800.classic.anr.txt  meme.INO_up800.classic.anr.xml  meme.INO_up800.classic.oops.html  meme.INO_up800.classic.oops.txt  meme.INO_up800.classic.oops.xml  meme.INO_up800.classic.zoops.html  meme.INO_up800.classic.zoops.txt  meme.INO_up800.classic.zoops.xml  meme.Klf1-200-100.classic.anr.html  meme.Klf1-200-100.classic.anr.txt  meme.Klf1-200-100.classic.anr.xml  meme.Klf1-200-100.classic.oops.html  meme.Klf1-200-100.classic.oops.txt  meme.Klf1-200-100.classic.oops.xml  meme.Klf1-200-100.classic.zoops.html  meme.Klf1-200-100.classic.zoops.txt  meme.Klf1-200-100.classic.zoops.xml  meme.Klf1-200-100.de.anr.html  meme.Klf1-200-100.de.anr.txt  meme.Klf1-200-100.de.anr.xml  meme.Klf1-200-100.de.oops.html  meme.Klf1-200-100.de.oops.txt  meme.Klf1-200-100.de.oops.xml  (+126 more)
tests/meme-chip/: Makefile.am  Makefile.in  combined.meme  meme-chip.html  meme-chip_dna_with_covalent.html  meme-chip_dna_with_covalent_combined.meme  meme-chip_dna_with_covalent_summary.tsv  meme-chip_fimo.tsv  meme-chip_streme_sites.tsv  summary.tsv
tests/mhmm/: Makefile.in
(+911 files in other folders)
