##
## Process this file with automake to produce Makefile.in
##

AUTOMAKE_OPTIONS = no-dependencies

## Call additional Makefiles in child directories
SUBDIRS = ama ame bed2fasta clustalw2fasta centrimo common create-priors draw-mhmm dreme fasta-center fimo \
          glam2 glam2scan gomo mast mcast meme meme-chip mhmm mhmms momo mhmmscan motiph psp-gen \
	  qvalue scaffold scripts sea spamo streme tgene tomtom web xstreme
