## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

# These files should be included with the distribution.

DATAFILES = \
  bed2fasta1.err \
  bed2fasta1.fa \
  bed2fasta10.err \
  bed2fasta10.fa \
  bed2fasta11.err \
  bed2fasta11.fa \
  bed2fasta12.err \
  bed2fasta12.fa \
  bed2fasta2.err \
  bed2fasta2.fa \
  bed2fasta3.err \
  bed2fasta3.fa \
  bed2fasta4.err \
  bed2fasta4.fa \
  bed2fasta5.err \
  bed2fasta5.fa \
  bed2fasta6.err \
  bed2fasta6.fa \
  bed2fasta7.err \
  bed2fasta7.fa \
  bed2fasta8.err \
  bed2fasta8.fa \
  bed2fasta9.err \
  bed2fasta9.fa

EXTRA_DIST = $(DATAFILES)
