#####################################################################
## FILE: Makefile.am
# AUTHOR: William Stafford Noble, Charles E. Grant
# CREATE DATE: 2003
# PROJECT: Meta-MEME
# COPYRIGHT: 2003, UW
#####################################################################

## Automake uses this file to generate a Makefile

# This Makefile builds the test output used to test FIMO.

# These files should be removed as part of the 'make clean' target.
CLEANFILES = 

# These files should be included with the distribution.
DATAFILES = \
	Makefile \
	Makefile.am \
	Makefile.in \
	fimo-motif23.tsv \
	fimo-priors-genomic.tsv \
	fimo-priors.tsv \
	fimo.tsv \
	fimo5.tsv \
	fimo6.tsv

EXTRA_DIST = $(DATAFILES)
