## $Id: Makefile.am $
##
## Process this file with automake to produce Makefile.in
##

AUTOMAKE_OPTIONS = no-dependencies

DATAFILES = \
	lex0.zoops.cisml \
	lex0.zoops.gff \
	lex0.zoops.html \
	lex0.zoops.tsv \
	lex0.zoops.xml \
	mcast3.cisml \
	mcast3.gff \
	mcast3.html \
	mcast3.tsv \
	mcast3.xml \
	mcast4.cisml \
	mcast4.gff \
	mcast4.html \
	mcast4.tsv \
	mcast4.xml \
	mcast5.cisml \
	mcast5.gff \
	mcast5.html \
	mcast5.tsv \
	mcast5.xml \
	parse_genomic.cisml \
	parse_genomic.gff \
	parse_genomic.html \
	parse_genomic.tsv \
	parse_genomic.xml

EXTRA_DIST = $(DATAFILES)
