## $Id: Makefile.am 1421 2006-11-01 01:15:40Z cegrant $
##
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

DATAFILES = \
	combined.meme \
	meme-chip.html \
	meme-chip_dna_with_covalent.html \
	meme-chip_dna_with_covalent_combined.meme \
	meme-chip_dna_with_covalent_summary.tsv \
	meme-chip_fimo.tsv \
	meme-chip_streme_sites.tsv \
	summary.tsv
EXTRA_DIST = $(DATAFILES)
